# rustshed

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  LICENSE  README.md  pyproject.toml  renovate.json
.github/workflows/: lint-n-test.yml  main.yml  publish.yml  release-please.yml  release.yml
examples/: shared.py
examples/rust_by_example/error_handling/multiple_error_types/: pulling_results_out_of_options.py
examples/rust_by_example/error_handling/result/: aliases_for_result.py  early_returns.py  introducing_?.py  map_for_result.py  map_for_result_intro.py  result.py  result_in_main.py
examples/rust_by_example/result/: result.py  result_shortcut.py
rustshed/: __init__.py  list.py  option.py  option_result.py  option_shortcut.py  panic.py  result_shortcut.py  to_option.py  to_result.py  typeguards.py
tests/: option_test.py  result_test.py  test_option.py  test_result.py  typeguards_test.py
