[tool.poetry]
name = "rustshed"
version = "0.5.0"
description = "Rust types in Python."
authors = ["Paweł Rubin <pawelrubindev@gmail.com>"]
keywords = ["rust", "result", "option"]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/pawelrubin/rustshed"
repository = "https://github.com/pawelrubin/rustshed"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Typing :: Typed",
]
include = ["rustshed/py.typed"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^23.7.0"
coverage = "^7.3.0"
ipython = "^8.14.0"
mypy = "^1.5.1"
pre-commit = "^2.21.0"
pylint = "^2.17.5"
pyright = "^1.1.325"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
strict = true
pretty = true
show_error_codes = true
disallow_any_unimported = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_any_unimported = false

[tool.pyright]
pythonVersion = "3.10"
include = ["rustshed", "examples", "tests"]
typeCheckingMode = "strict"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
